Fix overflow on narrow screens with background image

--- a/sass/core-layout.scss
+++ b/sass/core-layout.scss
@@ -1,7 +1,26 @@
 $breakpoint: 42em;
 $pad: 1em;
 
-// TODO convert CSS grid responsive stuff to a scss mixin.
+// Primary page layout is a single column with content centered horizontally.
+// It is mobile-first and as screen size allows additional columns are introduced side by side
+@mixin centered-column {
+  display: grid;
+  grid-template-columns: calc(min(90vw, 40em));
+  justify-content: center; // unclear if this is needed/correct
+  justify-items: center;
+  padding: $pad $pad;
+  ul {
+    // Necessary because list bullets are laid out weird
+    padding-left: $pad;
+  }
+  // I don't like this but it's necessary to keep stuff like
+  // the mailchimp div from overflowing the grid and forcing
+  // horizontal scrollbars
+  * {
+    max-width: unquote("min(100%, 40em)");
+  }
+}
+
 img, video, svg {
   max-width: 100%;
 }
